Bug 1695806 - Defer sending a snapshot reqeust for remote process iframe until cloning the iframe document finished. r=mattwoodrow,nika

Differential Revision: https://phabricator.services.mozilla.com/D119950